Fix clipping problem when exporting

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -48,7 +48,7 @@ body {
     text-align: center;
 }
 
-.container {
+#content {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
